# haskell-competitive-template

./: copy.sh  run.sh  tomoki-algo.cabal
src/: Main.hs  Solver.hs  Startup.hs
test/: Spec.hs
