name:                tomoki-algo
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Tomoki Imai
maintainer:          tomo832@gmail.com
-- copyright:
category:            Algorithm
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable main
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base, mtl, containers
  default-language:    Haskell2010

test-suite main-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  build-depends:       base, mtl, containers, hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010